Various spacing fixes

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -74,18 +74,18 @@ h2 {
   min-height: calc(100vh - 70px - 90px);
 }
 
-.container {
+.top-container {
   margin: 90px auto 0 auto;
+  max-width: 1240px;
+}
+
+.container {
+  margin: 0 auto;
   max-width: 1240px;
   padding: 0 36px;
 
-  p {
-    color: var(--textNormal);
-  }
-
-  hr {
-    border-color: var(--textLabel);
-    margin: 1em 0;
+  @media (max-width: $breakpoint-mobile) {
+    padding: 0 20px;
   }
 }
 
@@ -145,7 +145,12 @@ h2 {
   position: relative;
   margin: 0 auto;
   max-width: 1240px;
-  padding: 0 20px;
+  padding: 0 36px;
+
+  @media (max-width: $breakpoint-mobile) {
+    padding: 0 20px;
+  }
+
   max-height: 90px;
 }
 
@@ -158,7 +163,7 @@ h2 {
 
   ul li {
     display: inline-block;
-    margin-right: 20px;
+    margin-left: 20px;
   }
 
   a {
@@ -270,7 +275,12 @@ h2 {
 /* │ Home         │ index-page.js │ */
 /* └──────────────┴───────────────┘ */
 .home-banner {
-  padding: 60px 0;
+  padding: 60px 36px;
+
+  @media (max-width: $breakpoint-mobile) {
+    padding: 60px 20px;
+  }
+
   align-items: center;
 
   .hero-container {
@@ -362,19 +372,19 @@ h2 {
   }
 }
 
-.home-form-container {
+.home-form-max-width {
+  max-width: 1240px;
+  margin: 0 auto;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  overflow-x: hidden;
-  padding: 0 36px;
-  width: 100vw;
+  justify-content: space-between;
   position: relative;
-  left: 50%;
-  transform: translateX(-50vw);
-
-  background-color: var(--charcoal);
   color: var(--white);
+  padding: 0 36px;
+
+  @media (max-width: $breakpoint-mobile) {
+    padding: 0 20px;
+  }
 
   h2 {
     margin-top: 0;
@@ -410,6 +420,10 @@ h2 {
     background-color: var(--primary);
     cursor: pointer;
   }
+}
+
+.home-form-container {
+  background-color: var(--charcoal);
 }
 
 .contact-form-home {
@@ -876,7 +890,13 @@ table tr th:last-child {
 .contact-page,
 .thanks-page,
 .not-found-page {
-  padding: 50px 20px;
+  margin: 90px auto 0 auto;
+  max-width: 1240px;
+  padding: 50px 36px;
+
+  @media (max-width: $breakpoint-mobile) {
+    padding: 0 20px;
+  }
 
   h1 {
     color: var(--primary);
@@ -999,7 +1019,9 @@ table tr th:last-child {
   }
 
   @media (max-width: $breakpoint-md) {
-    padding: 50px 0 ul {
+    padding: 50px 0;
+
+    ul {
       display: flex;
       justify-content: space-between;
     }
